# LyricsSeeker

./: README.md  demo.sh  pyproject.toml
lyricsseeker/: models.py  utils.py
lyricsseeker/providers/: __init__.py  dummy.py  netease.py
lyricsseeker/providers/api/: netease.py
lyricsseeker/services/: dbus.py  dbus.xml  lyrics.py  mpris.py  mpris.xml
plasmoid/io.github.brucezhang1993.statusbar_lyrics/: CMakeLists.txt  app.pro
plasmoid/io.github.brucezhang1993.statusbar_lyrics/package/: metadata.json
plasmoid/io.github.brucezhang1993.statusbar_lyrics/package/contents/code/: dbus.pri  dbusplugin.h  declarativedbusadaptor.cpp  declarativedbusinterface.cpp  qmldir
plasmoid/io.github.brucezhang1993.statusbar_lyrics/package/contents/dbus/: dbus.pro  dbusplugin.cpp  declarativedbusadaptor.h  declarativedbusinterface.h
plasmoid/io.github.brucezhang1993.statusbar_lyrics/package/contents/tests/: tests.pro  tst_dbus.cpp
plasmoid/io.github.brucezhang1993.statusbar_lyrics/package/contents/tests/auto/: tst_dbus.qml
plasmoid/io.github.brucezhang1993.statusbar_lyrics/package/contents/ui/: main.qml
