[tool.poetry]
name = "lyricsseeker"
version = "0.1.0"
description = ""
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "*"
httpx = "*"
dbus-next = { version = "*", platform = "linux" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
